Homepage textspinner fixed on mobile layout

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -218,13 +218,18 @@
   transform-style: preserve-3d;
   transform-origin: 30px 30px 0;
   width: 36%;
+  height: 3rem;
 
   @screen sm {
     transform-origin: 36px 36px 0;
+    height: 3rem;
   }
-
+  @screen  md{
+    
+  }
   @screen lg {
     transform-origin: 45px 45px 0;
+    height: auto;
   }
 }
 
